[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = ""
authors = ["Artur Das <me@artur.wtf>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.11"
ray = {extras = ["serve"], version = "^2.9.3"}
sentence-transformers = "^2.5.1"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.353"
ipdb = "^0.13.13"
ipython = "^8.22.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
